Изменения согласно ТЗ 16 спринта, добавлен модуль шлюз, тесты, реализация запроса вещи